<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">LucaHome</string>
    <string name="image">Picture</string>
    <string name="notavailable">n.a.</string>
    <string name="all_sockets_off">All Sockets Off</string>
    <string name="example">Example</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="addPlus">+</string>
    <string name="add">Add</string>
    <string name="x">X</string>
    <string name="del">Del</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="socket">Socket</string>
    <string name="gpio">GPIO</string>
    <string name="timer">Timer</string>
    <string name="schedule">Schedule</string>
    <string name="movie">Movie</string>
    <string name="birthday">Birthday</string>
    <string name="alarm">Alarm</string>
    <string name="sockets">Sockets</string>
    <string name="gpios">GPIOs</string>
    <string name="timers">Timer</string>
    <string name="birthdays">Birthdays</string>
    <string name="alarms">Alarms</string>
    <string name="printer">Printer</string>
    <string name="socketName">Name of socket</string>
    <string name="socketCode">Code of socket</string>
    <string name="socketState">State of socket</string>
    <string name="allSocketsOff_visible">All Sockets Off Button</string>
    <string name="startOtherApps">Start other apps like BubbleUPNP when activating socket</string>
    <string name="startAudioApp">Start an audio app</string>
    <string name="startOsmcApp">Start an OSMC app</string>
    <string name="socket_example">Socket Example</string>
    <string name="time_example">xx:xx</string>
    <string name="ssid_input">Enter your home SSID</string>
    <string name="timer_duration">Default duration of timer</string>
    <string name="socketTest">Socket Test</string>
    <string name="contentDescription">This is an image</string>
    <string name="information">Information</string>
    <string name="set_display_socket_notification">Show socket notification</string>
    <string name="set_display_weather_notification">Enable notification for weather forecast</string>
    <string name="set_display_temperature_notification">Show temperature notification</string>
    <string name="set_display_birthday_notification">Show birthday notification</string>
    <string name="set_display_sleep_notification">Show sleep notification</string>
    <string name="set_display_camera_notification">Show camera notification</string>
    <string name="change">Change</string>
    <string name="user">User</string>
    <string name="ok">Ok</string>
    <string name="set_socket_notification_visibility">Show socket in notification</string>
    <string name="close">Close</string>
    <string name="dialog_user_password_title">Enter your user credentials</string>
    <string name="hint_enter_user_name">Enter your user name</string>
    <string name="hint_enter_user_password">Enter your password</string>
    <string name="dialog_add_birthday_title">Create a new birthday</string>
    <string name="hint_enter_birthday_name">Enter the name</string>
    <string name="dialog_movie_title">Create a new movie</string>
    <string name="hint_enter_movie_title">Enter a title</string>
    <string name="hint_enter_movie_genre">Enter a genre</string>
    <string name="hint_enter_movie_description">Enter a description</string>
    <string name="dialog_socket_title">Create a new socket</string>
    <string name="hint_enter_socket_name">Enter a name</string>
    <string name="hint_enter_socket_area">Enter the area</string>
    <string name="hint_enter_socket_code">Enter the code</string>
    <string name="dialog_schedule_title">Create a new schedule</string>
    <string name="hint_enter_schedule_name">Enter a name</string>
    <string name="dialog_timer_title">Create a new timer</string>
    <string name="sendCommand">Send Command</string>
    <string name="useBeacons">Use beacons to get your location in the flat. Used for automation of sockets and other stuff!</string>
    <string name="activateBeacons">Activate beacon scanner</string>
</resources>
