<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/dialog_add_birthday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_birthday_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/TextIcon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <EditText
        android:id="@+id/dialog_birthday_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_birthday_name"
        android:textColor="@color/TextIcon" />

    <DatePicker
        android:id="@+id/dialog_birthday_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/TextIcon" />

    <Button
        android:id="@+id/dialog_birthday_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_blank"
        android:text="@string/save"
        android:textColor="@color/TextIcon" />

</LinearLayout>