<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkPrimary"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Notifications"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/TextIcon" />

            <Switch
                android:id="@+id/switch_display_socket_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/set_display_socket_notification"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_display_weather_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/set_display_weather_notification"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_display_temperature_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/set_display_temperature_notification"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/DarkPrimary"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Media applications"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                android:background="@color/TextIcon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/startOtherApps"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/TextIcon" />

            <CheckBox
                android:id="@+id/startAudioAppCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/startAudioApp"
                android:textColor="@color/TextIcon" />

            <CheckBox
                android:id="@+id/startOsmcAppCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/startOsmcApp"
                android:textColor="@color/TextIcon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notificationSocketLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/DarkPrimary"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/set_socket_notification_visibility"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/TextIcon"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>