<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background"
    android:padding="2dp" >

    <ImageView
        android:id="@+id/timer_item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/timer" />

    <TextView
        android:id="@+id/timer_item_border"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/timer_item_image"
        android:background="@color/TextIcon" />

    <Button
        android:id="@+id/timer_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/timer_item_border"
        android:background="@drawable/button_blank"
        android:gravity="center_vertical|start"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_item_name"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/timer_item_border"
        android:text="@string/time_example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer_item_weekday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_item_name"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/timer_item_time"
        android:text="@string/time_example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer_item_socket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timer_item_weekday"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/timer_item_weekday"
        android:text="@string/time_example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer_item_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timer_item_socket"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/timer_item_socket"
        android:text="@string/time_example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timer_item_playsound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timer_item_socket"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/timer_item_action"
        android:text="@string/time_example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <Button
        android:id="@+id/timer_item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:background="@drawable/delete"
        android:text="@string/delete"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

</RelativeLayout>