<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background"
    android:padding="2dp" >

    <ImageView
        android:id="@+id/movie_item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/movie" />

    <TextView
        android:id="@+id/movie_item_border"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/movie_item_image"
        android:background="@color/TextIcon" />

    <Button
        android:id="@+id/movie_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toEndOf="@+id/movie_item_border"
        android:layout_toStartOf="@+id/movie_item_rating"
        android:background="@drawable/button_blank"
        android:gravity="center_vertical|start"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/TextIcon"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/movie_item_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/movie_item_title"
        android:layout_below="@+id/movie_item_title"
        android:background="@drawable/button_blank"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon" />

    <TextView
        android:id="@+id/movie_item_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toStartOf="@+id/movie_item_play"
        android:background="@drawable/button_blank"
        android:gravity="center_vertical|start"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon" />

    <TextView
        android:id="@+id/movie_item_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/movie_item_rating"
        android:layout_below="@+id/movie_item_rating"
        android:background="@drawable/button_blank"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon" />

    <Button
        android:id="@+id/movie_item_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:text="@string/play"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/TextIcon" />

</RelativeLayout>